# nearest-exit

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/nearest_exit/: cache.py  cli.py  config.py  countries.py  diagnostics.py  doh.py  geo.py  geofilter.py  history.py  models.py  rounds.py  scoring.py  stun.py  targets.py
src/nearest_exit/probes/: icmp.py  socks5.py  tcp.py
src/nearest_exit/providers/: airvpn.py  base.py  mullvad.py  nordvpn.py  pia.py
tests/: test_airvpn_normalize.py  test_cli.py  test_config.py  test_countries.py  test_doh.py  test_geofilter.py  test_history.py  test_icmp_parse.py  test_mullvad_normalize.py  test_nordvpn_normalize.py  test_pia_normalize.py  test_rounds.py  test_scoring.py  test_socks5_probe.py  test_stun.py  test_targets.py  test_tcp_probe.py
tests/fixtures/: airvpn_status.json  mullvad_sample.json  nordvpn_countries.json  nordvpn_recommendations.json  pia_servers_v6.txt
