[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nearest-exit"
version = "0.0.1"
description = "Independently rank VPN relays by measured latency from your current network."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "faeton" }]
keywords = [
    "vpn", "mullvad", "nordvpn", "airvpn", "pia", "wireguard", "openvpn",
    "latency", "ping", "relay", "server-selection",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
nearest-exit = "nearest_exit.cli:main"

[project.urls]
Homepage = "https://github.com/faeton/nearest-exit"
Issues = "https://github.com/faeton/nearest-exit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nearest_exit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
